@@ -1,5 +1,10 @@
 2009-07-02  Tomas Cerha  <cerha@brailcom.org>
 
+	* lib/pytis/cms/web.py:
+	Pytis CMS: Allow variable substitution also in embedded module's content..
+
+2009-07-02  Tomas Cerha  <cerha@brailcom.org>
+
 	* lib/pytis/form/form.py:
 	Fixed input data validation within interactive import..
 
